<resources>
    <string name="app_name">TaskModule</string>
    <string name="title_home">主页</string>
    <string name="title_task">任务</string>
    <string name="title_mine">我的</string>
    <string name="task">任务</string>
    <string name="task_publish">发布任务</string>
    <string name="task_receive">领取任务</string>
    <string name="task_center">任务中心</string>
    <string name="task_statistics">任务统计</string>
    <string name="account_integrals">¥520</string>
    <string name="title_activity_task_category">TaskCategory</string>
    <string name="title_activity_task_module">TaskModule</string>
    <string name="title_activity_task_publish">发布任务</string>
    <string name="title_activity_task_receive">TaskReceive</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_task_receive_details">任务详情</string>
    <string name="title_activity_personal_center">PersonalCenter</string>
    <string name="user_id">用户ID</string>
    <string name="user_info">查看或编辑用户信息</string>
</resources>
